fix flexbox styling on smaller screens with justify-content

--- a/styles/Portfolio.module.scss
+++ b/styles/Portfolio.module.scss
@@ -140,6 +140,7 @@
         overflow-y: auto;
         padding: 0;
         flex-direction: column;
+        justify-content: space-around;
     }
 
     .portfolioWrapper {
